<resources>
    <string name="app_name">Dice Town</string>
    <string name="mainMenuHint">Enter Town Name</string>
    <string name="mainMenuJoin">Join Game</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="mainMenuMessage">Please enter host\'s IP address</string>
    <string name="mainMenuHost">Host Game</string>
    <string name="lobbyReady">Ready</string>
    <string name="lobbyUnReady">Not Ready</string>
    <string name="lobbyStartGame">Start Game</string>
    <string name="toMarketplace">Marketplace</string>
    <string name="backToOwnCity">Return to my city</string>
    <string name="prevTown">prev</string>
    <string name="nextTown">next</string>
    <string name="oneDice">one</string>
    <string name="twoDice">two</string>
    <string name="viewTowns">view towns</string>
    <string name="accept">accept</string>
    <string name="continuePrompt">"Press to continue"</string>
    <string name="backToPick">back to pick</string>
    <string name="coinImage">coin icon</string>
    <string name="gameOver">Game Over</string>
    <string name="youWin">You Win!</string>
    <string name="otherWin">%1$s Wins!</string>
    <string name="endGame">End Game</string>

    <string name="cHall">city hall icon</string>
    <string name="harbor">harbor icon</string>
    <string name="tStation">train station icon</string>
    <string name="mall">mall icon</string>
    <string name="aPark">amusement park icon</string>
    <string name="rTower">radio tower icon</string>
    <string name="airport">airport icon</string>

</resources>
