<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/inGameLayout">

    <!-- the infoBar contains the city being viewed as well as that player's money -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/infoBar">
        <TextView
            android:id="@+id/townName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_toStartOf="@id/coinIcon"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/coinAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true" />
        <ImageView
            android:contentDescription="@string/coinImage"
            android:id="@+id/coinIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/coin"
            android:layout_toStartOf="@id/coinAmountText" />
    </RelativeLayout>

    <!-- The part of the screen that the player interacts with -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/infoBar"
        android:id="@+id/activeScreen">
        <LinearLayout
            android:id="@+id/landmarkBar"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/arrowBar"
            style="?android:attr/buttonBarStyle">
            <ImageButton
                android:contentDescription="@string/cHall"
                android:id="@+id/cityHallButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/harbor"
                android:id="@+id/harborButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/tStation"
                android:id="@+id/trainStationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/mall"
                android:id="@+id/shoppingMallButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/aPark"
                android:id="@+id/amusementParkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/rTower"
                android:id="@+id/radioTowerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:contentDescription="@string/airport"
                android:id="@+id/airportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/townScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/landmarkBar"
            android:layout_above="@id/arrowBar">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="6"
                android:id="@+id/establishmentGrid"
                android:layout_gravity="fill_horizontal">
            </GridLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/arrowBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/prevTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/prevTown"
                android:onClick="visitTown"/>
            <Button
                android:id="@+id/inGameMiddleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="middleButton"/>
            <Button
                android:id="@+id/nextTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/nextTown"
                android:onClick="visitTown"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
