<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mike.dicetown.MainMenu"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:weightSum="1"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/app_name"
        android:typeface="serif"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/mainMenuEditName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/mainMenuHint"
        android:textAlignment="center"
        android:layout_marginTop="75dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"
        android:background="#50686868"/>

    <EditText
        android:id="@+id/mainMenuEditTownName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/mainMenuTownHint"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"
        android:background="#50686868"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/mainMenuJoin"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:onClick="joinListener"
        android:background="#CC686868"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/mainMenuHost"
        android:textSize="35sp"
        android:layout_marginTop="25dp"
        android:onClick="hostListener"
        android:background="#CC686868"/>

</LinearLayout>
